# Pointify

./: PROJECT_STRUCTURE.md  README - EN.md  README - UA.md  README.md  bot.py  config.py  database.py  handlers.py  pyproject.toml
.lh/: bot.py.json  database.py.json  handlers.py.json
.lh/migrations/: 001_add_manual_name_column.py.json
migrations/: 001_add_manual_name_column.py
