[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot[job-queue]>=20.0",
    "sqlalchemy>=2.0.37",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
]
